@@ -1,3 +1,6 @@
+4 July 2014: Wouter
+	- Fix #593: segfault or crash upon rotating logfile.
+
 3 July 2014: Wouter
 	- DLV tests added.
 	- signit tool fixup for compile with libldns library.
